# ESPEI

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  2ESPEI_fit_single_phase.tdb  CHANGES.rst  Dockerfile  FCC_L12-test-CPM.json  FittingDebug.ipynb  INPUT+MODEL.json  L12_FCC_changed.tdb  LICENSE  MANIFEST.in  MultiFit-Energy.ipynb  MultiFit-HighRes.ipynb  MultiFit-HighRes2.ipynb  MultiFit.ipynb  Parameters.ipynb  README.md  README.rst  RELEASING.rst  environment-dev.yml  environment.yml  fit.py  input-schema.yaml  input.json  mcmc-test_new.ipynb  paramselect.py  pyproject.toml  refstates.py  requirements.txt  run.py  setup.cfg  setup.py  spec.local.yaml  spec.yaml  test.py
Al-Ni/: Al-Ni-B2-old.ipynb  Al-Ni-B2.ipynb  Al-Ni-L12-Results.ipynb  Al-Ni-L12-Run.ipynb  Al-Ni-L12.ipynb  Al-Ni-blank.tdb  Al-Ni-start.tdb  BCC_B2-HM-SQS-2009-Jiang.json  FCC_L12-DFT-Shunli-CPM.json  FCC_L12-DFT-Shunli-HM.json  FCC_L12-DFT-Shunli-SM.json  FCC_L12-YiWang-CPM.json  Ni3Al-CPM.json  parameters.json
CU-MG/: Cu-Mg-input.json  cu-mg_dft.tdb  espei-in.yaml  order-disorder.py
docs/: CHANGES.rst  Makefile  advanced_schedulers.rst  conf.py  contributing.rst  cu-mg-example.rst  design.rst  howto_use_custom_unary.rst  index.rst  input_data.rst  input_files.rst  installation.rst  make.bat  mpi.rst  quickstart.rst  recipes.rst  serve.sh  specifying_priors.rst  theory.rst  tutorial_gen_custom_mod_params.rst  writing_input.rst
espei/: __init__.py  _version.py  analysis.py  citing.py  constants.py  core_utils.py  database_utils.py  datasets.py  espei_script.py  fit.py  input-schema.yaml  jin  logger.py  lu2005-volumes.tdb  mcmc.py  order_disorder_fit.py  paramselect.py  phase_models.py  pickle_override.py  plot.py  priors.py  refdata.py  rstate.py  run_espei.py  shadow_functions.py  sublattice_tools.py  utils.py  validation.py  volume-modeling-1.ipynb  volume-modeling-2-tdb-digitization.ipynb  volume-modeling-2_TDB.ipynb  volume-modeling-2a_TDB.ipynb  volume-modeling-3-elastic.ipynb  volume-modeling-4-all-from-espei.ipynb
first_successful_tieline/: 2016-03-21 16:17:38.966573-ALNI-iter0.tdb  2016-03-21 16:17:38.966573-ALNI-iter1.tdb  2016-03-21 16:17:38.966573-ALNI-iter10.tdb  2016-03-21 16:17:38.966573-ALNI-iter2.tdb  2016-03-21 16:17:38.966573-ALNI-iter3.tdb  2016-03-21 16:17:38.966573-ALNI-iter4.tdb  2016-03-21 16:17:38.966573-ALNI-iter5.tdb  2016-03-21 16:17:38.966573-ALNI-iter6.tdb  2016-03-21 16:17:38.966573-ALNI-iter7.tdb  2016-03-21 16:17:38.966573-ALNI-iter8.tdb  2016-03-21 16:17:38.966573-ALNI-iter9.tdb
input_test/: H+BCC_A2+MU_PHASE-V.N. Svechnikov-1964.json  (+13 more)
(+360 files in other folders)
